--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+
+
 
     implementation "com.gorisse.thomas.sceneform:sceneform:1.21.0"
 
