--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,11 +67,28 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
+
+    implementation 'com.github.lincollincol:compose-audiowaveform:1.1.1'
+
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
 
 
     implementation "com.gorisse.thomas.sceneform:sceneform:1.21.0"
+    implementation 'com.github.lincollincol:amplituda:2.2.2'
+    implementation 'org.jodd:jodd-util:6.1.0'
+    implementation 'com.github.massoudss:waveformSeekBar:5.0.2'
 
     implementation("androidx.compose.runtime:runtime-livedata:1.3.2")
+
+
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+
+    /* Media3 */
+    def media3_version = "1.0.0-beta01"
+    implementation "androidx.media3:media3-exoplayer:$media3_version"
+    implementation "androidx.media3:media3-session:$media3_version"
+    implementation "androidx.media3:media3-ui:$media3_version"
+
+    implementation 'androidx.activity:activity-compose:1.6.1'
 }
