--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+        id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -79,16 +81,29 @@ dependencies {
     implementation 'org.jodd:jodd-util:6.1.0'
     implementation 'com.github.massoudss:waveformSeekBar:5.0.2'
 
-    implementation("androidx.compose.runtime:runtime-livedata:1.3.2")
+    implementation("androidx.compose.runtime:runtime-livedata:1.4.0")
 
 
     implementation "androidx.navigation:navigation-compose:2.5.3"
 
-    /* Media3 */
-    def media3_version = "1.0.0-beta01"
-    implementation "androidx.media3:media3-exoplayer:$media3_version"
-    implementation "androidx.media3:media3-session:$media3_version"
-    implementation "androidx.media3:media3-ui:$media3_version"
+    implementation "com.google.dagger:hilt-android:2.44"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
+    kapt "com.google.dagger:hilt-compiler:2.38.1"
 
-    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'com.google.code.gson:gson:2.8.9'
+
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+
+    implementation 'androidx.activity:activity-compose:1.7.0'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
+
 }
