--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@ buildscript {
         compose_ui_version = '1.3.3'
     }
     dependencies {
-
+        classpath "com.android.tools.build:gradle:7.4.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
+        classpath "io.realm:realm-gradle-plugin:10.4.0" // add this line
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.44'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
@@ -11,4 +13,5 @@ plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'io.realm.kotlin' version '1.7.0' apply false
 }
