--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,6 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
 
-
     implementation "com.gorisse.thomas.sceneform:sceneform:1.21.0"
     implementation 'com.github.lincollincol:amplituda:2.2.2'
     implementation 'org.jodd:jodd-util:6.1.0'
@@ -107,6 +106,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 
     implementation 'androidx.activity:activity-compose:1.7.0'
+
+    implementation "com.google.accompanist:accompanist-pager:0.23.1"
+    implementation "io.coil-kt:coil-compose:1.4.0"
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 
