--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ android {
 }
 
 dependencies {
+    def mediaVersion = "1.0.0-alpha03"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     implementation 'io.realm.kotlin:library-base:1.7.0'
@@ -109,6 +110,11 @@ dependencies {
 
     implementation "com.google.accompanist:accompanist-pager:0.23.1"
     implementation "io.coil-kt:coil-compose:1.4.0"
+
+
+    implementation "androidx.media3:media3-exoplayer:$mediaVersion"
+    implementation "androidx.media3:media3-ui:$mediaVersion"
+    implementation "androidx.media3:media3-exoplayer-dash:$mediaVersion"
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 
