--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,5 +119,8 @@ dependencies {
 
 
     implementation 'com.yandex.android:maps.mobile:4.3.1-full'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation "com.google.accompanist:accompanist-permissions:0.19.0"
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.19.0"
 
 }
